# mjpegStreamer

./: CMakeLists.txt  Dockerfile  README.md  main.cpp  tcpserver.cpp  tcpserver.h
.github/workflows/: cmake.yml  docker-image.yml
